Created a class that represents the key that will be saved in the varRepo. Added a factory that creates varId. Modified varRepo to work with this new class.